--- a/index.html
+++ b/index.html
@@ -18,14 +18,14 @@ if(typeof Muse == "undefined") window.Muse = {}; window.Muse.assets = {"required
   <!-- CSS -->
   <link rel="stylesheet" type="text/css" href="css/site_global.css?crc=3770548214"/>
   <link rel="stylesheet" type="text/css" href="css/master_a-p_g_-maestra.css?crc=418634696"/>
-  <link rel="stylesheet" type="text/css" href="css/index.css?crc=4000924909" id="pagesheet"/>
+  <link rel="stylesheet" type="text/css" href="css/index.css?crc=374298292" id="pagesheet"/>
   <!-- IE-only CSS -->
   <!--[if lt IE 9]>
   <link rel="stylesheet" type="text/css" href="css/nomq_preview_master_a-p_g_-maestra.css?crc=3824530138"/>
-  <link rel="stylesheet" type="text/css" href="css/nomq_index.css?crc=3975295214" id="nomq_pagesheet"/>
+  <link rel="stylesheet" type="text/css" href="css/nomq_index.css?crc=259728179" id="nomq_pagesheet"/>
   <![endif]-->
   <!-- JS includes -->
-  <script src="https://use.typekit.net/ik/Y2_8kQxgTm5ubkoK2WC8YDDuSca9RlkXsghIGfUOrIXfenjgfVzEDMbPH2qhF2quwDBLwRwuZQjtwDZywQi852y8jDFKZeIajcwkFQShFRF8ZeJ-HPG0ShNKda40dkoRdhXCShNKda40dkoRdhXCiaiaO1FzjcNkdcv0jhNlJyTyZeskZWFDOWFyd1wlSY4zOAFzdcs8d1F8ZfJVZcjldAmXjPuaZAJlSY4zH6GJxFIfIMMjMkMfH6qJCkwbMs6eJMJ7fbK74gMgeMb6MqGIQWmDZZMgl-RW_69.js" type="text/javascript"></script>
+  <script src="https://use.typekit.net/ik/_4ymTcx-FPBtYODBlvwsYrzVvJOUPXVy1EegtNu2mqvfenjgfVzEDMbPH2qhF2quwDBLwRwuZQjtwDZywQi852y8jDFKZeIajcwkFQShFRF8ZeJ-HPG0ShNKda40dkoRdhXCShNKda40dkoRdhXCiaiaO1FzjcNkdcv0jhNlJyTyZeskZWFDOWFyd1wlSY4zOAFzdcs8d1F8ZfJVZcjldAmXjPuaZAJlSY4zH6GJxFIfIMMjMkMfH6qJCkwbMs6eJMJ7fbK74gMgeMb6MqGIQWmDZZMgndWW_69.js" type="text/javascript"></script>
   <!-- Other scripts -->
   <script type="text/javascript">
    try {Typekit.load();} catch(e) {}
@@ -45,20 +45,16 @@ if(typeof Muse == "undefined") window.Muse = {}; window.Muse.assets = {"required
       </div>
      </div>
      <div class="clearfix colelem shared_content" id="pu301-4" data-content-guid="pu301-4_content"><!-- group -->
-      <a class="nonblock nontext anim_swing clearfix grpelem" id="u301-4" href="index.html#uno" data-sizePolicy="fixed" data-pintopage="page_fixedCenter"><!-- content --><p>1. Identificar a un policía real.</p></a>
-      <a class="nonblock nontext anim_swing clearfix grpelem" id="u335-4" href="index.html#cuatro" data-sizePolicy="fixed" data-pintopage="page_fixedCenter"><!-- content --><p>4. Negociación</p></a>
+      <a class="nonblock nontext anim_swing clearfix grpelem" id="u301-4" href="index.html#uno" data-sizePolicy="fixed" data-pintopage="page_fixedCenter" data-leftAdjustmentDoneBy="pu301-4"><!-- content --><p>1. Identificar a un policía real.</p></a>
+      <a class="nonblock nontext anim_swing clearfix grpelem" id="u304-4" href="index.html#dos" data-sizePolicy="fixed" data-pintopage="page_fixedCenter" data-leftAdjustmentDoneBy="pu301-4"><!-- content --><p>2. Encuentro con la policía y violaciones</p></a>
+      <a class="nonblock nontext anim_swing clearfix grpelem" id="u334-4" href="index.html#tres" data-sizePolicy="fixed" data-pintopage="page_fixedCenter" data-leftAdjustmentDoneBy="pu301-4"><!-- content --><p>3. ¿Cómo saber si un policía prefiere recibir un soborno en vez de ponerle una multa?</p></a>
      </div>
-     <div class="clearfix colelem shared_content" id="pu304-4" data-content-guid="pu304-4_content"><!-- group -->
-      <a class="nonblock nontext anim_swing clearfix grpelem" id="u304-4" href="index.html#dos" data-sizePolicy="fixed" data-pintopage="page_fixedCenter"><!-- content --><p>2. Encuentro con la policía y violaciones</p></a>
-      <a class="nonblock nontext anim_swing clearfix grpelem" id="u336-4" href="index.html#cinco" data-sizePolicy="fixed" data-pintopage="page_fixedCenter"><!-- content --><p>5. ¿Cómo salir de la situación y algunas notas de seguridad?</p></a>
+     <div class="clearfix colelem shared_content" id="pu335-4" data-content-guid="pu335-4_content"><!-- group -->
+      <a class="nonblock nontext anim_swing clearfix grpelem" id="u335-4" href="index.html#cuatro" data-sizePolicy="fixed" data-pintopage="page_fixedCenter" data-leftAdjustmentDoneBy="pu335-4"><!-- content --><p>4. Negociación</p></a>
+      <a class="nonblock nontext anim_swing clearfix grpelem" id="u336-4" href="index.html#cinco" data-sizePolicy="fixed" data-pintopage="page_fixedCenter" data-leftAdjustmentDoneBy="pu335-4"><!-- content --><p>5. ¿Cómo salir de la situación y algunas notas de seguridad?</p></a>
+      <a class="nonblock nontext anim_swing clearfix grpelem" id="u337-4" href="index.html#historias" data-sizePolicy="fixed" data-pintopage="page_fixedCenter" data-leftAdjustmentDoneBy="pu335-4"><!-- content --><p>Historias de Soborno</p></a>
      </div>
-     <div class="clearfix colelem shared_content" id="pu334-4" data-content-guid="pu334-4_content"><!-- group -->
-      <a class="nonblock nontext anim_swing clearfix grpelem" id="u334-4" href="index.html#tres" data-sizePolicy="fixed" data-pintopage="page_fixedCenter" data-leftAdjustmentDoneBy="pu334-4"><!-- content --><p>3. ¿Cómo saber si un policía prefiere recibir un soborno en vez de ponerle una multa?</p></a>
-      <div class="clearfix grpelem" id="pu337-4"><!-- column -->
-       <a class="nonblock nontext anim_swing clearfix colelem" id="u337-4" href="index.html#historias" data-sizePolicy="fixed" data-pintopage="page_fixedCenter" data-leftAdjustmentDoneBy="pu337-4"><!-- content --><p>Historias de Soborno</p></a>
-       <a class="nonblock nontext anim_swing clearfix colelem" id="u338-4" href="index.html#epilogo" data-sizePolicy="fixed" data-pintopage="page_fixedCenter" data-leftAdjustmentDoneBy="pu337-4"><!-- content --><p>EPÍLOGO</p></a>
-      </div>
-     </div>
+     <a class="nonblock nontext anim_swing clearfix colelem shared_content" id="u338-4" href="index.html#epilogo" data-sizePolicy="fixed" data-pintopage="page_fixedCenter" data-content-guid="u338-4_content"><!-- content --><p>EPÍLOGO</p></a>
      <div class="clearfix colelem shared_content" id="u112-7" data-sizePolicy="fixed" data-pintopage="page_fixedCenter" data-content-guid="u112-7_content"><!-- content -->
       <p>Este libro se divide en dos partes: la guía y el apéndice. En la guía proveemos información para que el lector pueda identificar las diferentes etapas de un soborno y pueda actuar adecuadamente en caso de encontrarse un policía. También presentamos varios estudios de caso que ayudan a reconocer tanto la intención por parte de un policía de ser sobornado, como ciertos términos específicos y lenguaje corporal. En el apéndice proponemos una lista de términos de doble sentido que son comunes en un soborno, y también información sobre los billetes usados en Colombia (su historia y apodos). Al final se encuentran treinta testimonios que proveen al lector de varias situaciones en contexto a manera de ejemplos del uso de la información de este manual.</p>
       <p>&nbsp;</p>
@@ -328,8 +324,8 @@ if(typeof Muse == "undefined") window.Muse = {}; window.Muse.assets = {"required
     <div class="position_content temp_no_id" data-orig-id="page_position_content">
      <span class="clearfix colelem placeholder" data-placeholder-for="pu97-4_content"><!-- placeholder node --></span>
      <span class="clearfix colelem placeholder" data-placeholder-for="pu301-4_content"><!-- placeholder node --></span>
-     <span class="clearfix colelem placeholder" data-placeholder-for="pu304-4_content"><!-- placeholder node --></span>
-     <span class="clearfix colelem placeholder" data-placeholder-for="pu334-4_content"><!-- placeholder node --></span>
+     <span class="clearfix colelem placeholder" data-placeholder-for="pu335-4_content"><!-- placeholder node --></span>
+     <span class="nonblock nontext anim_swing clearfix colelem placeholder" data-placeholder-for="u338-4_content"><!-- placeholder node --></span>
      <span class="clearfix colelem placeholder" data-placeholder-for="u112-7_content"><!-- placeholder node --></span>
      <span class="clearfix colelem placeholder" data-placeholder-for="puno_content"><!-- placeholder node --></span>
      <span class="clearfix colelem placeholder" data-placeholder-for="u125-4_content"><!-- placeholder node --></span>
@@ -391,8 +387,8 @@ if(typeof Muse == "undefined") window.Muse = {}; window.Muse.assets = {"required
       <img class="block temp_no_id temp_no_img_src" data-orig-src="images/4-18-07b-07.png?crc=350103433" alt="" data-heightwidthratio="1" data-image-width="24" data-image-height="24" data-orig-id="u102_img" src="images/blank.gif?crc=4208392903"/>
      </div>
      <span class="clearfix colelem placeholder" data-placeholder-for="pu301-4_content"><!-- placeholder node --></span>
-     <span class="clearfix colelem placeholder" data-placeholder-for="pu304-4_content"><!-- placeholder node --></span>
-     <span class="clearfix colelem placeholder" data-placeholder-for="pu334-4_content"><!-- placeholder node --></span>
+     <span class="clearfix colelem placeholder" data-placeholder-for="pu335-4_content"><!-- placeholder node --></span>
+     <span class="nonblock nontext anim_swing clearfix colelem placeholder" data-placeholder-for="u338-4_content"><!-- placeholder node --></span>
      <span class="clearfix colelem placeholder" data-placeholder-for="u112-7_content"><!-- placeholder node --></span>
      <div class="clearfix colelem" id="pu116-4"><!-- group -->
       <span class="clearfix grpelem placeholder" data-placeholder-for="u116-4_content"><!-- placeholder node --></span>
